tests/should-fail/null-as-code.j

// this used to work on patches rougly before 1.29 but it doesn't seem to work now
function foo takes nothing returns code
    return null
endfunction
